# scorebot

./: .env.example  .gitignore  Cargo.toml  README.md
archived/: AGENTS.md  answer_sheet_stream_test.go  chat_adapter.go  cli_chat.go  command_account.go  command_exam.go  command_helpers_test.go  command_qt.go  command_router.go  command_subject.go  crypto_cache.go  data_store.go  database.go  fc_handler.go  fc_handler_test.go  formatter_reports.go  globals.go  go.mod  go.sum  http_helpers.go  http_helpers_test.go  instrumentation.go  main.go  message_context.go  notify_moon.go  provider_bfz.go  provider_hfs.go  provider_qt.go  provider_teacher.go  provider_teacher_qt.go  provider_teacher_qt_test.go  qqbot_api.go  qqbot_api_test.go  qt_logic_test.go  school_names.go  school_names_test.go  store_json.go  store_memory.go  store_sqlite.go  utility_logic_test.go  (+2 more)
archived/migrations/: 20260505_runtime_schema.sql
scorebot-common/: Cargo.toml
scorebot-common/src/: lib.rs
scorebot-frontend/: .env.example  Cargo.toml
scorebot-frontend/src/: main.rs  sender.rs
scorebot-mq/: Cargo.toml
scorebot-mq-common/: Cargo.toml
src/: config.rs  main.rs
