[package]
name = "scorebot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
interprocess = { version = "2.4.2", features = ["tokio"] }
scorebot-common = { path = "scorebot-common" }
anyhow = "1.0.102"