[package]
name = "scorebot-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
bincode = "3.0.0"
scorebot-common = { path = "../scorebot-common" }
interprocess = { version = "2.4.2", features = ["tokio"] }
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
